# GoL_cpp

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
src/: main.cpp  main_func.cpp  main_func.h
src/func/: func.cpp  func.h
src/game/: gol.cpp  gol.h
src/ui/: Button.h
